apps/aaaaaaa/base/aaaaaaa-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aaaaaaa-vs
  namespace: aaaaaaa
  labels:
    app: aaaaaaa
    version: 0.0.1
    backstage.io/kubernetes-id: aaaaaaa
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - aaaaaaa.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: aaaaaaa-svc
      weight: 100
